--- a/frontend/src/app/features/boards/pages/board-webhooks-page/board-webhooks-page.component.scss
+++ b/frontend/src/app/features/boards/pages/board-webhooks-page/board-webhooks-page.component.scss
@@ -245,7 +245,7 @@
   }
   &.status-pending {
     background: #{$priority-medium}22;
-    color: $priority-medium;
+    color: $priority-medium-text;
   }
 }
 
