--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -11,5 +11,9 @@ $priority-medium:   #ffa800;
 $priority-low:      #7ae229;
 $priority-urgent:   #ff3d00;
 
+$priority-medium-text: #946200;
+$priority-low-text:    #3d7a0d;
+$priority-on-bright:   #2a3647;
+
 $bp-mobile:            768px;
 $mobile-footer-height: 64px;
